tests/snapshots/validator_snapshots__validator_all@validator-145.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p4_interface_method_signature_mismatch_errors.of
---
ValidationErrors(
    [
        "type 'test_module::S' member 'f' does not match interface 'test_module::I'",
    ],
)
