tests/snapshots/validator_snapshots__validator_all@validator-146.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p4_missing_interface_method_errors.of
---
Ok
