tests/snapshots/validator_snapshots__validator_all@validator-147.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p2_unknown_type_errors.of
---
ValidationErrors(
    [
        "unknown type 'Nope' in module 'test_module'",
    ],
)
