tests/snapshots/validator_snapshots__validator_all@validator-148.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p3_universal_extend_records_typeparam_args.of
---
ValidationErrors(
    [
        "unknown type 'U' in module 'test_module'",
    ],
)
