tests/snapshots/validator_snapshots__validator_all@validator-149.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p3_extend_on_interface_errors.of
---
ValidationErrors(
    [
        "invalid extend target in module 'test_module'",
    ],
)
