tests/snapshots/validator_snapshots__validator_all@validator-15.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/15_ffi_pinning.of
---
ValidationErrors(
    [
        "invalid struct initializer in function 'test_module::allocate' (null)",
        "type mismatch in function 'test_module::install' (call to register_callback arg 0): expected 'struct#0', found 'null'",
        "type mismatch in function 'test_module::remove' (call to unregister_callback arg 0): expected 'struct#0', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "unknown member 'alloc' on 'null' in function 'test_module::allocate'",
        "unknown member 'free' on 'null' in function 'test_module::main'",
        "unknown member 'size' on 'null' in function 'test_module::main'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown type 'Buffer' in module 'test_module'",
        "unknown variable 'Buffer' in function 'test_module::allocate'",
        "unknown variable 'pin' in function 'test_module::install'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'pin' in function 'test_module::remove'",
        "unknown variable 'unpin' in function 'test_module::remove'",
        "unknown variable 'unpin' in function 'test_module::remove'",
    ],
)
