tests/snapshots/validator_snapshots__validator_all@validator-150.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p3_specialised_extend_records_concrete_args.of
---
Ok
