tests/snapshots/validator_snapshots__validator_all@validator-152.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p4_universal_extend_satisfies_interface.of
---
ValidationErrors(
    [
        "unknown type 'T' in module 'test_module'",
    ],
)
