tests/snapshots/validator_snapshots__validator_all@validator-153.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p4_implements_non_interface_errors.of
---
ValidationErrors(
    [
        "type 'test_module::B' implements clause references a non-interface",
    ],
)
