tests/snapshots/validator_snapshots__validator_all@validator-154.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p4_interface_field_required_on_struct.of
---
ValidationErrors(
    [
        "type 'test_module::S' is missing member 'x' required by interface 'test_module::I'",
    ],
)
