tests/snapshots/validator_snapshots__validator_all@validator-155.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p4_interface_method_signature_mismatch_errors.of
---
Ok
